docs(ui): improve hero section visibility over background video
Wraps the hero content in a glass-style card to enhance text readability and contrast while preserving the background video aesthetic.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <main class="page">
       <div class="shell">
-        <header class="hero">
+  <header class="hero hero-card">
           <h1>
             Pro-Tasker API | Backend Test Instructions | (<span id="year"></span
             >)
@@ -38,7 +38,7 @@
 
         <!-- Author -->
         <section class="section author-center">
-          <div class="card author-card">
+          <div class="card author-card author-card-glass">
             <h2 class="author-title">Author</h2>
             <div class="author-name">Dewan Mahmud (Rocky)</div>
             <div class="author-links">
